version/0.38/_sources/api/solver/tui/solution/run_calculation/run_calculation_contents.rst.txt
.. _ref_solver_tui_solution_run_calculation:

run_calculation
===============

.. autoclass:: ansys.fluent.core.generated.solver.tui_261.main_menu.solution.run_calculation
   :members: calculate, dual_time_iterate, interrupt, iterate, residual_verbosity, time_step_count
   :show-inheritance:
   :undoc-members:
   :exclude-members: __weakref__, __dict__
   :special-members: __init__
   :autosummary:
   :autosummary-members:

.. toctree::
   :hidden:

   adaptive_time_stepping/adaptive_time_stepping_contents
   cfl_based_adaptive_time_stepping/cfl_based_adaptive_time_stepping_contents
   compute_resources/compute_resources_contents
   data_sampling/data_sampling_contents
   data_sampling_options/data_sampling_options_contents
   options/options_contents
   parameters/parameters_contents
   pollutants/pollutants_contents
   pseudo_time_settings/pseudo_time_settings_contents
   remote_compute/remote_compute_contents
   solution_steering/solution_steering_contents
   transient_controls/transient_controls_contents
